--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Watch anime">
     <meta name="description" content="Scroll and stalk your friends">
     <meta name="description" content="Be a loser">
-    
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
     <title>Gaines</title>
 </head>
@@ -19,7 +19,7 @@
     <p>Updated page</p>
     <input type="text"placeholder="type here"> I love my cat, Koia. </input>
     <p><a title = "West-mec lololoolololol" target="_blank" href= "https://www.west-mec.edu/">West-Mec</a></p>
-    <p>Japanese example: ご飯が熱い。</p>
+    <p>Japanese example: <span lang="ja"> ご飯が熱い。</span>.</p>
     <a href="./about.html">About Page Test Open Graph link</a>
     <p><a title = "GoArmy" target="_blank" href="https://www.goarmy.com">www.goarmy.com </a></p>
     <p><a title = "Youtube" target="_blank" href="https://www.youtube.com">www.youtube.com</a></p>
