--- a/website_mockup/index.html
+++ b/website_mockup/index.html
@@ -16,6 +16,7 @@
     <meta property="og:description" content="">
     <meta property="og:site_name" content="Cameron G Mockup website">
     <link rel="icon" href="favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="favicon-32x32.png" sizes="32x32" type="image/png">
     <title>Cameron G Mockup Website</title>
 </head>
 <body>
