--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Be a loser">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
-    <title>Gaines</title>
+    <title>Cameron Gaines</title>
 </head>
 <body>
     <h1>Cameron Gaines</h1>
@@ -21,10 +21,72 @@
     <p><a title = "West-mec lololoolololol" target="_blank" href= "https://www.west-mec.edu/">West-Mec</a></p>
     <p>Japanese example: <span lang="ja"> ご飯が熱い。</span>.</p>
     <a href="./about.html">About Page Test Open Graph link</a>
+    
     <p><a title = "GoArmy" target="_blank" href="https://www.goarmy.com">www.goarmy.com </a></p>
     <p><a title = "Youtube" target="_blank" href="https://www.youtube.com">www.youtube.com</a></p>
     <p><a title = "Crunchyroll" target="_blank" href="https://www.crunchyroll.com">www.crunchyroll.com</a></p>
     <p><a title = "Instagram" target="_blank" href="https://www.instagram.com">www.instagram.com</a></p>
     <p><a title = "Reddit" target="_blank" href="https://www.reddit.com">www.reddit.com</a></p>
+    <a href="http://west-mec.edu">
+        <img src="https://deltaco.com/files/menu/item/DEL-116_Promo4_Category_Image_Epic_Fresh_450x355.jpg?v=4.046" alt="Burtito" width="459" height="250">
+    </a>
+    <h1>This</h1>
+    <h2>Is</h2>
+    <h3>A</h3>
+    <h4>Test</h4>
+    <h5>For</h5>
+    <h6>Headers</h6>
+    <aside>
+        <p>This is an aside p tag</p>
+    </aside>
+    <article>
+        <p>Article text is the main text of the webpage</p>
+        <ol>
+            Stuff to do after school
+            <li>Drive home</li>
+            <li>get something to eat</li>
+            <li>watch show with dad</li>
+            <li>Finish Two pager</li>
+            <li>Sleep</li>
+        </ol>
+        <ul>
+            Shows i need to watch
+            <li>Demon slayer</li>
+            <li>Jiu Jitsu Kaisen</li>
+            <li>Chainsaw man</li>
+            <li>My Hero Academia</li>
+            <li>The disastrous life of Saiki K.</li>
+        </ul>
+        <ol>
+            My top 10 favorite MHA characters
+            <li><strong><em>Lemillion</em></strong></li>
+            <li>Season 6/7 Deku</li>
+            <li>Mirko</li>
+            <li>Kirishima</li>
+            <li>FatGum</li>
+            <li>Twice</li>
+            <li>Mr. Aizawa</li>
+            <li>Bakugo</li>
+            <li>Gentle Criminal</li>
+            <li>All Might</li>
+        </ol>
+        <ul>
+            Stuff i need for school
+            <li>Pencils</li>
+            <li>backpack</li>
+            <li>notebooks</li>
+            <li>binders</li>
+            <li>highlighters</li>
+            <li>scissors</li>
+            <li>pens</li>
+            <li>new shoes</li>
+            <li>phone</li>
+            <li>nice cut</li>
+        </ul>
+    </article>
+    <section>
+        <p>Section tags are used frequently in multi column layouts</p>
+        <p><u style="text-decoration-line: underline"> What the sigma</u></p>
+    </section>
 </body>
 </html>
